--- a/index.css
+++ b/index.css
@@ -6,31 +6,17 @@
 }
 
 body{
-    color:#333;
     max-width: 1980px;
     background-color: #fff;
-}
-
-.header-container{
-    max-width: 1980px;
-    padding: 0 15px;
-    margin: 0 auto; 
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
 }
 
 header{
-    background-color: #fff;
     position: fixed;
     display: flex;
-    max-width: 1980px;
-    align-items: center;
+    background-color: #fff;
     border-bottom: 1px solid #ddd;
-    justify-content: space-between;
-    width: 100%;
+    width: 80%;
+    justify-content: space-around;
 }
 
 header .logo{
@@ -44,12 +30,12 @@ header .logo svg{
     height: auto;
 }
 
-nav{
+header nav{
     display: flex;
     align-items: center;
     position: relative;
-    gap: 20px;
-    margin: auto;
+    gap: 0 20px;
+    margin: 60px;
 }
 
 nav a{
@@ -79,6 +65,7 @@ header nav:hover a{
     position: absolute;
     padding: 10px;
     left: 0;
+    justify-content: center;
     top: 100%;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -103,12 +90,12 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .app-download-button{
-    background-color: #ff7e36;
+    background-color: #f3aa82;
     padding: 8px 16px;
     border: none;
     cursor: pointer;
-    position: absolute;
-    border-radius: 5px;
+    position: relative;
+    border-radius: 10px;
 }
 
 .app-download-button a{
@@ -118,15 +105,16 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .search-container{
-    width: 100%;
+    width: 80%;
     padding: 15px 20px;
+    max-width: 1980px;
     background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .location{
     margin-right: 20px;
-    display: inline-block;
+    display: flex;
+    border-radius: 20px;
 }
 
 .location a{
@@ -134,93 +122,41 @@ nav a.with-submenu:hover + .sub-menu{
     color: #333;
     text-decoration: none;
     font-size: bold;
-    border-radius: 20px;
     padding: 8px 12px;
     background-color: #f1f3f5;
     position: relative;
-}
-
-.location a::after{
-    content: "▼";
-    font-size: 12px;
-    color: #999;
-    margin-left: 8px;
 }
 
 .search-bar{
     display: flex;
     align-items: center;
-    margin-top: 10px;
     gap: 10px;
 }
 
-.with-seacrh-menu {
-    background-color: #f1f3f5;
-    padding: 8px 12px;
-    border-radius: 5px;
-    font-size: 14px;
-    color: #333;
-    font-weight: bold;
-    text-decoration: none;
-    cursor: pointer;
-    position: relative;
-}
-
 .search-bar input[type="text"]{
-    flex: 1;
-    padding: 8px 12px;
+    padding: 20px 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 14px;
-}
-
-.search-submenu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 8px;
-    z-index: 10;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.search-submenu a {
-    display: block;
-    padding: 5px 10px;
-    font-size: 14px;
-    color: #333;
-    text-decoration: none;
-    white-space: nowrap;
-}
-
-.search-submenu a:hover {
-    background-color: #f8f9fa;
-    color: #d6c2b4;
-}
-
-.with-seacrh-menu:hover + .search-submenu {
-    display: block;
 }
 
 .popular-searches{
     margin-top: 10px;
+    padding: 40px 10px;
+
 }
 
 .popular-searches nav p{
     font-size: 14px;
     color: #333;
-    margin-bottom: 5px;
-    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .popular-searches nav .search-item{
     font-size: 14px;
     display: inline-block;
     color: #555;
-    margin-right: 10px;
+    margin-right: 20px;
     text-decoration: none;
 }
 
@@ -230,11 +166,8 @@ nav a.with-submenu:hover + .sub-menu{
 
 .banner-container {
     width: 100%;
-    background-color: #FFFAE5; 
+    background-color: #e4a46b; 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 50px 20px;
     position: relative;
 }
 
@@ -254,21 +187,20 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .banner-text h1 {
-    font-size: 36px;
+    font-size: 40px;
     color: #333;
     font-weight: bold;
-    line-height: 1.4;
     margin-bottom: 20px;
 }
 
 .banner-text p {
-    font-size: 16px;
+    font-size: 18px;
     color: #555;
-    line-height: 1.6;
+    font-weight: bold;
 }
 
 .banner-content img {
-    max-width: 100%;
+    max-width: 500px;
     height: auto;
     object-fit: contain;
 }
@@ -290,6 +222,7 @@ nav a.with-submenu:hover + .sub-menu{
 .categories h2 {
     font-size: 24px;
     color: #333;
+    text-align: start;
     font-weight: bold;
     margin-bottom: 30px;
 }
@@ -302,15 +235,14 @@ nav a.with-submenu:hover + .sub-menu{
 
 .category-item {
     text-align: center;
-    width: 180px;
     background-color: #f8f9fa;
-    border-radius: 10px;
+    border-radius: 50%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .category-item img {
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
     object-fit: contain;
     margin-bottom: 10px;
 }
@@ -320,92 +252,139 @@ nav a.with-submenu:hover + .sub-menu{
     color: #333;
     margin-top: 10px;
     font-weight: bold;
+    margin-bottom: 60px;
+}
+
+.app-container {
+    width: 100%;
+    max-width: 1980px;
+    background-color: #eed7c4;
+    display: flex;
+    justify-content: center;
+    padding: 50px 20px;
 }
 
 .app-adver {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    justify-content: center;
+    max-width: 1980px;
+    width: 80%;
+    display: flex;
     align-items: center;
-    padding: 40px 20px;
-    gap: 20px;
-    background-color: #ffefe0;
+    justify-content: space-between;
+    margin: 36px 36px;
+    position: relative;
 }
 
-.app-text{
-    text-align: start;
+.app-text {
+    flex: 1;
 }
 
 .app-text h2 {
-    font-size: 24px;
-    color: #ff7e36;
-    margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ff7e36; 
+    margin-bottom: 10px;
 }
 
 .app-text h1 {
-    font-size: 30px;
-    color: #333;
-    margin-bottom: 20px;
+    font-size: 36px;
+    font-weight: bold;
+    color: #333; 
+    line-height: 1.4;
 }
 
-.app-button a {
-    margin: 0 10px;
+.app-button {
+    display: flex;
+    gap: 10px; 
+    margin-top: 20px;
 }
 
-.app-button img {
-    height: 40px;
-    width: auto;
-}
-
-.app-content img {
-    max-width: 100px;
+.app-button a img {
+    width: 150px;
     height: auto;
+}
+
+.app-content {
+    flex: 1;
+    display: flex;
+    justify-content:left;
+    align-items: center;
+    position: relative;
+}
+
+.app-content img{
+
+}
+
+.footer-container{
+    width: 100%;
+    background-color: #fff;
+    padding: 50px 20px;
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
 }
 
 footer{
     background-color: #fff;
-    padding: 40px 0;
-    gap: 10px;
-    border-top: 1px solid #ddd;
+    max-width: 1200px;
+    gap: 20px;
+    flex-direction: row;
+    display: flex;
+}
+
+.footer-links{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
     text-align: left;
 }
 
-.footer-link{
-    flex: 1;
-    margin: 0 15px;
+.footer-links h4{
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
 }
 
-.footer-links h4 {
-    font-size: 16px;
-    color: #333;
+
+.footer-links ul {
+    list-style: none;
+    padding: 0;
 }
 
 .footer-links ul li {
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
-.footer-links ul li a {
-    font-size: 14px;
-    color: #666;
+.footer-links ul li a{
     text-decoration: none;
+    font-size: 14px;
+    color: #555;
+    transition: color 0.3s ease;
 }
 
-.footer-social a {
-    margin: 0 10px;
+.footer-links ul li a:hover{
+    color: #333;
 }
 
-.footer-social img {
-    width: 24px;
-    height: 24px;
+.footer-social {
+    display: flex;
+    align-items: right;
+    gap: 20px;
 }
 
-.footer-bottom {
-    text-align: start;
+.footer-social svg{
+    width: 16px;
+    height: 16px;
+    display: block;
+}
+
+.footer-bottom{
+    padding: 20px 36px;
+    text-align: left;
+    border-top: 1px solid #f1f3f5; 
+}
+
+.footer-bottom p{
+    margin: 5px 0;
     font-size: 12px;
-    color: #888;
-    margin-top: 20px;
-}
-
-.footer-bottom p {
-    margin-bottom: 5px;
+    color: #999;
 }
