--- a/index.css
+++ b/index.css
@@ -16,13 +16,21 @@ header{
     background-color: #fff;
     border-bottom: 1px solid #ddd;
     width: 100%;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 999;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    margin: 0;
+    top: 0;
+    box-sizing: border-box;
 }
 
 header .logo{
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 header .logo svg{
@@ -31,7 +39,7 @@ header .logo svg{
 }
 
 header nav{
-    display: flex;
+    display: block;
     align-items: center;
     position: relative;
     gap: 0 20px;
@@ -41,7 +49,7 @@ header nav{
 nav a{
     color: #111;
     font-size: 16px;
-    padding: 5px 10px;
+    padding: 12px 8px;
     text-decoration: none;
     position: relative;
     font-weight: bold;
@@ -74,11 +82,15 @@ header nav:hover a{
 }
 
 .sub-menu a{
-    display: block;
+    display: flex;
     padding: 5px 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    text-align: center;
     color: #333;
     font-size: 12px;
     text-decoration: none;
+    top: 0;
 }
 
 nav a.with-submenu:hover + .sub-menu{
