--- a/index.css
+++ b/index.css
@@ -19,8 +19,7 @@ header{
     align-items: center;
     justify-content: space-between;
     z-index: 999;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
+    padding: 1rem;
     margin: 0;
     top: 0;
     box-sizing: border-box;
@@ -43,7 +42,7 @@ header nav{
     align-items: center;
     position: relative;
     gap: 0 20px;
-    margin: 60px;
+    margin: 10px;
 }
 
 nav a{
@@ -72,13 +71,13 @@ header nav:hover a{
     display: none;
     position: absolute;
     padding: 10px;
-    left: 0;
+    left: 225px;
     justify-content: center;
-    top: 100%;
+    top: 30px;
     background-color: #fff;
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+
 }
 
 .sub-menu a{
@@ -102,35 +101,44 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .app-download-button{
-    background-color: #f3aa82;
-    padding: 8px 16px;
+    background-color: #ff6f0f24;
     border: none;
+    box-sizing: border-box;
     cursor: pointer;
     position: relative;
     border-radius: 10px;
+    display: inline-flex;
+    justify-content: center;
 }
 
 .app-download-button a{
-    color: #ff7e36;
-    font-size: 16px;
+    color: rgb(255, 111, 15);
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    padding: 12px 12px;
     text-decoration: none;
 }
 
 .search-container{
-    width: 80%;
+    width: 1050px;
+    box-sizing: border-box;
+    display: block;
     padding: 15px 20px;
-    max-width: 1980px;
+    max-width: 1400px;
+    padding: 0px 64px;
     background-color: #fff;
 }
 
 .location{
-    margin-right: 20px;
+    margin-right: 16px;
     display: flex;
     border-radius: 20px;
+    box-sizing: border-box;
 }
 
 .location a{
-    font-size: 14px;
+    font-size: 16px;
     color: #333;
     text-decoration: none;
     font-size: bold;
@@ -141,35 +149,51 @@ nav a.with-submenu:hover + .sub-menu{
 
 .search-bar{
     display: flex;
+    box-sizing: border-box;
     align-items: center;
     gap: 10px;
 }
 
 .search-bar input[type="text"]{
-    padding: 20px 10px;
+    padding: 12px 42px 12px 12px;
+    box-sizing: border-box;
+    cursor: text;
     border: 1px solid #ddd;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 18px;
+    height: 42px;
+    font-weight: 400;
 }
 
 .popular-searches{
-    margin-top: 10px;
+    margin: -2px;
     padding: 40px 10px;
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+}
 
+.popular-searches nav{
+    padding: 12px 0px 12px 6px;
+    display: inline-flex;
+    box-sizing: border-box;
 }
 
 .popular-searches nav p{
     font-size: 14px;
     color: #333;
-    margin-bottom: 10px;
+    box-sizing: border-box;
+    display: block;
+    margin-right: 16px;
 }
 
 .popular-searches nav .search-item{
+    align-items: center;
+    box-sizing: border-box;
+    line-height: 20px;
     font-size: 14px;
-    display: inline-block;
+    display: flex;
     color: #555;
-    margin-right: 20px;
-    text-decoration: none;
 }
 
 .popular-searches nav .search-item:hover{
@@ -177,20 +201,25 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .banner-container {
-    width: 100%;
-    background-color: #e4a46b; 
+    background-color: rgb(255, 241, 170); 
     display: flex;
+    box-sizing: border-box;
+    height: 430px;
+    justify-content: center;
+    line-height: 20px;
     position: relative;
 }
 
 .banner{
     display: flex;
+    padding: 64px;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
     width: 100%;
     background-color: #ffeab5;
-    max-width: 1200px;
+    width: 1000px;
+    flex-direction: column;
 }
 
 .banner-text{
@@ -199,16 +228,24 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .banner-text h1 {
-    font-size: 40px;
+    font-size: 26px;
     color: #333;
-    font-weight: bold;
-    margin-bottom: 20px;
+    box-sizing: border-box;
+    display: block;
+    line-height: 35px;
+    font-weight: 700;
+    margin-top: 28px;
+    width: 900px;
 }
 
 .banner-text p {
-    font-size: 18px;
+    font-size: 15px;
+    box-sizing: border-box;
+    display: none;
+    font-weight: 700;
+    line-height: 22px;
+    width: auto;
     color: #555;
-    font-weight: bold;
 }
 
 .banner-content img {
@@ -218,57 +255,82 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .category-container {
-    width: 100%;
-    padding: 50px 20px;
+    max-width: 1400px;
     background-color: #fff;
-    display: flex;
+    display: block;
+    flex-direction: column;
     justify-content: center;
 }
 
 .categories {
-    width: 100%;
-    max-width: 1200px;
+    width: 830px;
+    height: 250px;
+    line-height: 21px;
+    box-sizing: border-box;
     text-align: center;
+    margin-bottom: 64px;
 }
 
 .categories h2 {
-    font-size: 24px;
+    display: block;
+    box-sizing: border-box;
+    font-size: 20px;
+    height: 22px;
     color: #333;
     text-align: start;
     font-weight: bold;
-    margin-bottom: 30px;
+    margin: 30px 0px;
 }
 
 .category-list {
-    display: flex;
+    display: block;
+    padding: 2px;
     justify-content: space-around;
     gap: 20px;
+    box-sizing: border-box;
+    display: inline-grid;
+    row-gap: 12px;
+    column-gap: 12px;
+    border-radius: 50%;
+    margin: -40px 0px;
+    height: 180px;
+    width: 800px;
 }
 
 .category-item {
     text-align: center;
+    justify-content: center;
     background-color: #f8f9fa;
-    border-radius: 50%;
+    line-height: 21px;
+    width: 145px;
+    height: 178px;
+    box-sizing: border-box;
+    cursor: pointer;
+    flex-direction: column;
+    text-decoration: solid;
+    object-fit: contain;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .category-item img {
-    width: 80px;
+    width: 145px;
     height: 80px;
+    position: relative;
     object-fit: contain;
     margin-bottom: 10px;
 }
 
 .category-item p {
-    font-size: 14px;
+    box-sizing: border-box;
+    font-size: 16px;
     color: #333;
-    margin-top: 10px;
-    font-weight: bold;
-    margin-bottom: 60px;
+    text-align: center;
+    font-weight: 700;
 }
 
 .app-container {
-    width: 100%;
+    width: 800px;
+    he
     max-width: 1980px;
     background-color: #eed7c4;
     display: flex;
@@ -277,6 +339,8 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .app-adver {
+    padding: 0px 40px;
+    display: block;
     max-width: 1980px;
     width: 80%;
     display: flex;
