--- a/index.css
+++ b/index.css
@@ -1,38 +1,26 @@
-*{
+body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
 }
 
-body{
-    max-width: 1980px;
-    display: block;
-    background-color: #fff;
-    border: 0;
-    line-height: 21px;
-    width: 550px;
-}
-
 header{
     position: fixed;
-    display: block;
+    display: flex;
     background-color: #fff;
-    border-bottom: 1px solid #ddd;
-    width: 100%;
     align-items: center;
     justify-content: space-between;
     z-index: 999;
-    padding: 1rem;
-    margin: 0;
+    max-width: 1400px;
+    padding: 10px 20px;
+    margin: 0 auto;
     top: 0;
 }
 
 header .logo{
     display: flex;
-    align-items: center;
     justify-content: center;
-    cursor: pointer;
 }
 
 header .logo svg{
@@ -43,7 +31,7 @@ header .logo svg{
 header nav{
     display: flex;
     align-items: center;
-    position: relative;
+    text-decoration: none;
     gap: 20px;
 }
 
@@ -53,6 +41,7 @@ nav a{
     position: relative;
     font-weight: bold;
     transition: color 0.3s ease;
+    text-decoration: none;
 }
 
 nav a:hover{
@@ -77,7 +66,6 @@ header nav:hover a{
     background-color: #fff;
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
 }
 
 .sub-menu a{
@@ -108,6 +96,7 @@ nav a.with-submenu:hover + .sub-menu{
     border-radius: 4px;
     padding: 8px 16px;
     font-weight: bold;
+    transition: color 0.3s ease;
 }
 
 .app-download-button a{
@@ -124,31 +113,31 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .search-container{
-    width: 870px;
-    box-sizing: border-box;
-    display: block;
+    display: flex;
     padding: 0px 40px;
     max-width: 1400px;
-    margin-inline: auto;
+    margin: 0 auto;
+    gap: 20px;
+    flex-grow: 0;
     background-color: #fff;
 }
 
 .location{
-    margin-right: 16px;
-    display: block;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    border: 1px solid #ddd;
+    background-color: #f2f3f6;
+    cursor: pointer;
+    padding: 7px 14px;
 }
 
 .location a{
     font-size: 16px;
     height: 42px;
-    border-radius: 21px;
     color: #333;
-    align-items: center;
-    font-size: bold;
+    font-size: 700;
     padding: 0px 16px;
-    display: flex;
-    cursor: pointer;
-    background-color: #f2f3f6;
 }
 
 .location img{
@@ -158,29 +147,37 @@ nav a.with-submenu:hover + .sub-menu{
 
 .search-others{
     display: flex;
-    border: 1px solid #ddd;
-    align-items: center;
+    flex-grow: 1;
     flex-direction: column;
     gap: 15px;
 }
 
 .search-bar{
+    align-items: center;
     max-width: 1400px;
+    border-radius: 4px;
+    display: flex;
     background-color: #fff;
 }
 
 .search-bar-button{
-    padding: 10px;
+    padding: 10px 15px;
+    display: flex;
+    text-align: center;
     cursor: pointer;
+    background-color: #fff;
     border-right: 1px solid #ddd;
 }
 
 .search-bar-input{
+    display: flex;
+    align-items: center;
     padding: 7px 10px;
     flex-grow: 1;
 }
 
 .search-bar-input input{
+    flex-grow: 1;
     padding: 7px;
     font-size: 14px;
     border: none;
@@ -188,7 +185,7 @@ nav a.with-submenu:hover + .sub-menu{
 
 .search-icon{
     background-color: #fff;
-    border-radius: 4px;
+    border: none;
     cursor: pointer;
     transition: color 0.3s ease;
 }
@@ -208,7 +205,10 @@ nav a.with-submenu:hover + .sub-menu{
     color: #111;
     display: flex;
     position: relative;
+    align-items: center;
+    gap: 14px;
 }
+
 .popular-searches nav a{
     color: #777;
     text-decoration: none;
@@ -218,14 +218,8 @@ nav a.with-submenu:hover + .sub-menu{
     text-decoration: underline; 
 }
 
-.banner-container {
-    background-color: rgb(255, 241, 170); 
-    display: flex;
-    box-sizing: border-box;
-    height: 430px;
-    justify-content: center;
-    line-height: 20px;
-    position: relative;
+.main-container{
+    
 }
 
 .banner{
@@ -402,76 +396,92 @@ nav a.with-submenu:hover + .sub-menu{
 
 }
 
-.footer-container{
+.footer-right-group{
     width: 100%;
+    justify-content: space-between;
     background-color: #fff;
-    padding: 50px 20px;
+    padding: 50px;
+    max-width: 1200px;
     box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    gap: 40px;
 }
 
-footer{
-    background-color: #fff;
-    max-width: 1200px;
-    gap: 20px;
-    flex-direction: row;
+.footer-right{
+    gap: 40px;
     display: flex;
 }
 
-.footer-links{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
-    text-align: left;
+.footer-links-1{
+    display: flex;
+    flex-direction: column;
 }
 
-.footer-links h4{
-    font-size: 16px;
+.footer-links-1 h4{
+    font-size: 15px;
     font-weight: bold;
     color: #333;
     margin-bottom: 10px;
 }
 
-
-.footer-links ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer-links ul li {
-    margin-bottom: 8px;
-}
-
 .footer-links ul li a{
     text-decoration: none;
-    font-size: 14px;
-    color: #555;
+    font-size: 12px;
+    color: #444;
+    display: block;
     transition: color 0.3s ease;
+    margin-bottom: 5px;
 }
 
 .footer-links ul li a:hover{
-    color: #333;
+    color: #777;
+}
+
+.footer-left{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 25px;
 }
 
 .footer-social {
     display: flex;
-    align-items: right;
     gap: 20px;
 }
 
-.footer-social svg{
+.footer-social img{
     width: 16px;
     height: 16px;
-    display: block;
+    transition: color 0.3s ease;
+}
+
+.footer-social img:hover{
+    transform: scale(1.3);
 }
 
 .footer-bottom{
-    padding: 20px 36px;
+    padding: 20px 55px;
+    max-width: 1200px;
+    margin-top: 35px;
+    padding-top: 15px;
+    color: #888;
     text-align: left;
-    border-top: 1px solid #f1f3f5; 
 }
 
 .footer-bottom p{
-    margin: 5px 0;
+    display: flex;
+    margin-bottom: 10px;
     font-size: 12px;
-    color: #999;
+}
+
+.footer-links-2 {
+    text-decoration: none;
+    color: #888;
+    font-weight: 700;
+    transition: color 0.3s;
+}
+
+.footer-links-2 a{
+    text-decoration: none;
+    font-size: 12px;
 }
