--- a/index.css
+++ b/index.css
@@ -6,36 +6,44 @@ body{
 }
 
 header{
-    position: fixed;
     display: flex;
     background-color: #fff;
     align-items: center;
     justify-content: space-between;
-    z-index: 999;
-    max-width: 1400px;
+    width: 902px;
+    height: 182px;
     padding: 10px 20px;
-    margin: 0 auto;
+    box-sizing: border-box;
     top: 0;
 }
 
-header .logo{
+header .header-top{
+    z-index: 999;
+    width: 1980px;
+    top: 0;
+    width: 1400px;
+    height: 64px;
+    position: fixed;
+}
+
+.logo{
     display: flex;
     justify-content: center;
 }
 
-header .logo svg{
+.logo svg{
     width: 64px;
     height: 36px;
 }
 
-header nav{
+.header-top nav{
     display: flex;
     align-items: center;
     text-decoration: none;
     gap: 20px;
 }
 
-nav a{
+.header-top nav a{
     color: #111;
     font-size: 16px;
     position: relative;
@@ -44,15 +52,15 @@ nav a{
     text-decoration: none;
 }
 
-nav a:hover{
+.header-top nav a:hover{
     color: #111;
 }
 
-header nav:hover a:not(:hover){
+.header-top nav:hover a:not(:hover){
     color: #999;
 }
 
-header nav:hover a{
+.header-top nav:hover a{
     color: #111;
 }
 
@@ -60,9 +68,10 @@ header nav:hover a{
     display: none;
     position: absolute;
     padding: 10px;
-    left: 225px;
+    left: 930px;
     justify-content: center;
-    top: 30px;
+    top: 55px;
+    cursor: pointer;
     background-color: #fff;
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -89,12 +98,12 @@ nav a.with-submenu:hover + .sub-menu{
 }
 
 .app-download-button{
-    background-color: #d8c1b2;
+    background-color: #ffebe1;
     border: none;
     cursor: pointer;
     position: relative;
     border-radius: 4px;
-    padding: 8px 16px;
+    padding: 5px 10px;
     font-weight: bold;
     transition: color 0.3s ease;
 }
@@ -104,12 +113,11 @@ nav a.with-submenu:hover + .sub-menu{
     font-size: 14px;
     font-weight: 600;
     text-align: center;
-    padding: 12px 12px;
     text-decoration: none;
 }
 
 .app-download-button:hover{
-    background-color: #cc8f66;
+    background-color: #fac1a5;
 }
 
 .search-container{
