수정하는중

--- a/index.css
+++ b/index.css
@@ -28,6 +28,11 @@ header{
 
 .header-top{
     display: flex;
+    position: fixed;
+    z-index: 999;
+    width: 1980px;
+    top: 0;
+    width: 1400px;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
@@ -45,14 +50,22 @@ nav{
 
 .header-top nav a{
     margin: 0 10px;
-    color: #555;
+    color: #111;
     font-size: 16px;
     position: relative;
     text-decoration: none;
 }
 
 .header-top nav a:hover{
-    color: #ff6f0f;
+    color: #111;
+}
+
+.header-top nav:hover a:not(:hover){
+    color: #999;
+}
+
+.header-top nav:hover a{
+    color: #111;
 }
 
 .with-submenu:hover .sub-menu{
@@ -72,17 +85,41 @@ nav{
 }
 
 .sub-menu a{
-    display: block;
+    display: flex;
+    font-size: 12px;
+    cursor: pointer;
+    text-align: center;
     margin-bottom: 5px;
     text-decoration: none;
     color: #333;
 }
 
+.header-top nav a .with-submenu:hover + .sub-menu{
+    display: block;
+}
+
+.sub-menu a:hover{
+    background-color: #aaa9a9;
+}
+
+.app-download-button{
+    background-color: #ffebe1;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
 .app-download-button a{
-    background-color: #ff6f0f;
-    color: #fff;
+    color: rgb(255, 111, 15);
     padding: 8px 14px;
-    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
 }
 
 .app-download-button:hover{
@@ -115,7 +152,12 @@ nav{
 
 .search-container{
     display: flex;
+    padding-top: 6px;
+    height: 120px;
+    position: relative;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .search-bar{
