--- a/index.css
+++ b/index.css
@@ -190,19 +190,20 @@ nav{
     padding: 10px 0;
 }
 
-.popular-searches a{
+.popular-searches nav a{
     text-decoration: none;
-    color: #ff6f0f;
+    color: #777;
 }
 
+.popular-searches nav a:hover{
+    text-decoration: underline;
+}
 .main-contianer{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .banner{
@@ -230,6 +231,7 @@ nav{
 
 .banner-text p{
     font-size: 18px;
+    font-weight: bold;
     color: #555;
 }
 
@@ -260,8 +262,9 @@ nav{
 }
 
 .category-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    display: inline-grid;
+    grid-auto-flow: column;
+    grid-auto-rows: 1fr;
     gap: 20px;
     justify-items: center;
 }
@@ -271,15 +274,9 @@ nav{
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
     transition: transform 0.3s ease;
     text-align: center;
-}
-
-.category-item:hover{
-    transform: scale(1.2);
 }
 
 .category-item img{
@@ -291,8 +288,13 @@ nav{
     padding: 10px;
 }
 
+.category-item img:hover{
+        transform: scale(1.2);
+}
+
 .category-item p{
     font-size: 14px;
+    font-weight: bold;
     color: #333;
 }
 
