--- a/index.css
+++ b/index.css
@@ -159,7 +159,8 @@ header{
 
 .search-container{
     display: flex;
-    width: 100%;gap: 10px;
+    gap: 10px;
+    flex-grow: 1;
     align-items: center;
     flex-direction: column;
     justify-content: center;
@@ -171,8 +172,7 @@ header{
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 10px;
-    width: 60%;
-    height: 800px;
+    width: 1200px;
     background-color: #fff;
 }
 
