--- a/index.css
+++ b/index.css
@@ -11,11 +11,6 @@ body{
     background-color: #f9f9f9;
 }
 
-img{
-    max-width: 100%;
-    height: auto;
-}
-
 header{
     display: flex;
     width: 100%;
@@ -32,12 +27,14 @@ header{
     width: 1400px;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 150px;
     border-bottom: 1px solid #ddd;
 }
 
 .header-top .logo svg{
     display: block;
+    width: 80px;
+    height: 45px;
 }
 
 .header-top nav{
@@ -74,8 +71,8 @@ header{
 .sub-menu{
     display: block;
     position: absolute;
-    top: 80%;
-    left: 630px;
+    top: 90%;
+    left: 920px;
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 10px;
@@ -253,9 +250,7 @@ header{
     padding: 20px;
     background-color: #fff;
     margin: 20px 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
-    border-radius: 10px;
 }
 
 .categories h2{
