--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ header{
     display: block;
 }
 
-.sub-menu{
+.with-submenu .sub-menu{
     display: block;
     position: absolute;
     top: 90%;
@@ -80,7 +80,7 @@ header{
     z-index: 100;
 }
 
-.sub-menu a{
+.with-submenu .sub-menu a{
     display: grid;
     font-size: 12px;
     cursor: pointer;
@@ -127,7 +127,7 @@ header{
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 15px;
+    gap: 65px;
     background-color: #fff;
     justify-content: space-between;
 }
@@ -214,7 +214,6 @@ header{
     padding: 40px 20px;
     background-color: #fff7e6;
     border-radius: 10px;
-    margin-bottom: 20px;
 }
 
 .banner-text{
@@ -256,7 +255,8 @@ header{
 .categories h2{
     font-size: 24px;
     flex: 1;
-    top: 0;
+    text-align: start;
+    padding: 0px 180px;
     color: #111;
     margin-bottom: 20px;
 }
@@ -281,13 +281,14 @@ header{
 }
 
 .category-item img{
-    width: 100px;
-    height: 100px;
-    margin-bottom: 10px;
+    width: 165px;
+    height: 165px;
+    margin-bottom: 20px;
     border-radius: 50%;
+    border: 1px solid #ddd;
     transition: transform 0.3s ease;
     background-color: #f4f4f4;
-    padding: 10px;
+    padding: 24px;
 }
 
 .category-item img:hover{
@@ -295,35 +296,32 @@ header{
 }
 
 .category-item p{
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     color: #333;
 }
 
 .app-text{
-    text-align: center;
-    padding: 40px 20px;
+    text-align: left;
+    padding: 90px 36px;
     background-color: #fff7e6;
-    border-radius: 10px;
-    margin: 20px 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .app-text h2{
-    font-size: 24px;
+    font-size: 30px;
     color: #ff6f0f;
-    margin-bottom: 10px;
+    font-weight: 700;
 }
 
 .app-text h1{
-    font-size: 32px;
+    font-size: 45px;
     color: #333;
-    margin-bottom: 20px;
+    font-weight: 700;
+    margin-bottom: 15px;
 }
 
 .app-button{
     display: flex;
-    justify-content: center;
     gap: 15px;
 }
 
@@ -337,11 +335,8 @@ header{
     justify-content: space-around;
     align-items: center;
     padding: 40px 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
 }
+
 .app-content{
     width: 250px;
     height: 300px;
