--- a/index.css
+++ b/index.css
@@ -211,27 +211,29 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 20px;
+    padding: 0px 250px;
     background-color: #fff7e6;
-    border-radius: 10px;
 }
 
 .banner-text{
     flex: 1;
     margin-right: 20px;
+    padding-left: 80px;
+    padding-bottom: 120px;
 }
 
 .banner-text h1{
     font-size: 42px;
-    color: #FF6F0F;
+    color: #111;
     margin-bottom: 10px;
+    font-weight: 700;
     line-height: 1.4;
 }
 
 .banner-text p{
-    font-size: 18px;
-    font-weight: bold;
-    color: #555;
+    font-size: 20px;
+    font-weight: 700;
+    color: #333;
 }
 
 .banner-content{
@@ -240,15 +242,13 @@ header{
 }
 
 .banner-content img{
-    width: 100%;
+    width: 120%;
     max-width: 500px;
-    border-radius: 10px;
 }
 
 .categories{
     padding: 20px;
     background-color: #fff;
-    margin: 20px 0;
     text-align: center;
 }
 
@@ -256,7 +256,7 @@ header{
     font-size: 24px;
     flex: 1;
     text-align: start;
-    padding: 0px 180px;
+    padding: 0px 350px;
     color: #111;
     margin-bottom: 20px;
 }
@@ -275,7 +275,7 @@ header{
     flex-direction: column;
     align-items: center;
     padding-bottom: 100%;
-    width: 100%;
+    width: 180px;
     border-radius: 5px;
     text-align: center;
 }
@@ -303,6 +303,7 @@ header{
 
 .app-text{
     text-align: left;
+    height: 300px;
     padding: 90px 36px;
     background-color: #fff7e6;
 }
@@ -349,10 +350,8 @@ header{
     width: 100%;
     height: auto;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-bottom: 20px;
+    top: -353px;
+    left: 717px;
 }
 
 .footer-right-group{
