--- a/index.css
+++ b/index.css
@@ -64,20 +64,20 @@ header{
     color: #111;
 }
 
-.with-submenu:hover .sub-menu{
-    display: block;
-}
-
 .with-submenu .sub-menu{
-    display: block;
+    display: none;
     position: absolute;
-    top: 90%;
-    left: 920px;
+    top: 100%;
+    left: 0;
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 100;
+}
+
+.with-submenu:hover .sub-menu{
+    display: block;
 }
 
 .sub-menu a{
