--- a/index.css
+++ b/index.css
@@ -456,7 +456,7 @@ header{
 .footer-bottom{
     background-color: #fff;
     padding: 20px 20px;
-    text-align: center;
+    text-align: start;
     font-size: 14px;
     color: #777;
     line-height: 1.6;
