--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ header{
     height: 80px;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 240px;
+    padding: 10px 360px;
     border-bottom: 1px solid #ddd;
 }
 
@@ -105,6 +105,7 @@ header{
     cursor: pointer;
     position: relative;
     border-radius: 4px;
+    height: 32px;
     padding: 0px 2px;
     font-weight: bold;
     transition: color 0.3s ease;
@@ -287,7 +288,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 100%;
+    padding-bottom: 20%;
     width: 180px;
     border-radius: 5px;
     text-align: center;
@@ -343,12 +344,14 @@ header{
     width: 120px;
 }
 
-.footer-right-group{
+.footer-group{
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     background-color: #f5f5f5;
-    flex-wrap: wrap;
+    padding: 20px;
     padding-left: 400px;
+    flex-wrap: wrap;
     border-top: 1px solid #ddd;
 }
 
@@ -356,62 +359,68 @@ header{
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
+    justify-content: flex-end;
     flex: 2;
 }
+
 .footer-links-1{
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     padding: 0px 800px;
 }
+
 .footer-section{
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
+
 .footer-links-1 h4{
     font-size: 16px;
     color: #333;
-    margin: 0;
     font-weight: bold;
 }
+
 .footer-links-1 ul{
     list-style: none;
-    padding: 0;
-    margin: 0;
 }
+
 .footer-links-1 ul li{
     margin-bottom: 8px;
 }
+
 .footer-links-1 ul li a{
     text-decoration: none;
     font-size: 14px;
     color: #555;
 }
+
 .footer-links-1 ul li a:hover {
     text-decoration: underline;
 }
+
 .footer-left{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
     text-align: center;
+    flex: 1;
 }
 
 .footer-logo img{
-    width: 40px;
+    width: 80px;
     margin-bottom: 10px;
 }
 
 .footer-social{
     display: flex;
-    justify-content: center;
     gap: 15px;
 }
 
 .footer-social a img{
-    width: 30px;
+    width: 45px;
     height: auto;
     transition: transform 0.3s ease;
     border-radius: 50%;
