--- a/index.css
+++ b/index.css
@@ -367,7 +367,6 @@ header{
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    padding: 0px 800px;
 }
 
 .footer-section{
@@ -426,26 +425,28 @@ header{
     border-radius: 50%;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
+
 .footer-social a img:hover{
     transform: scale(1.2);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
 .footer-bottom{
-    padding-right: 450px;
+    padding-left: 250px;
     text-align: start;
     font-size: 14px;
     color: #777;
     line-height: 1.6;
     border-top: 1px solid #ddd;
 }
+
 .footer-bottom p{
     padding-top: 10px;
 }
+
 .footer-links-2{
     margin-top: 15px;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
     gap: 10px;
 }
 .footer-links-2 a p{
